# sdata-ontology

./: .gitignore  .htaccess  404.html  LICENSE  Makefile  README.md  index.html  min-v1.0.0.ttl  min-v2.0.0.ttl  min-v2.1.0.ttl  min-v3.0.0.ttl  min-v3.1.0.ttl  min-v3.2.0.ttl  min-v3.3.0.ttl  min-v3.4.0.ttl  min-v3.7.1.ttl  mkdocs.yml  opa-v1.0.0.ttl  pyproject.toml  sdata-agents.ttl  sdata-core-v0.10.0.ttl  sdata-core-v0.11.0.ttl  sdata-core-v0.12.0.ttl  sdata-core-v0.13.0.ttl  sdata-core-v0.13.1.ttl  sdata-core-v0.14.0.ttl  sdata-core-v0.15.0.ttl  sdata-core-v0.4.0.ttl  sdata-core-v0.5.0-autark.ttl  sdata-core-v0.5.0-bfo-alignment.ttl  sdata-core-v0.5.1.ttl  sdata-core-v0.6.0.ttl  sdata-core-v0.6.1.ttl  sdata-core-v0.7.0.ttl  sdata-core-v0.7.1.ttl  sdata-core-v0.9.0.ttl  sdata-core-v0.9.2.ttl  sdata-core.ttl  sdata-lifecycle.ttl  sdata-material-state-v0.1.0.ttl  (+14 more)
.github/workflows/: docs-deploy.yml
diagrams/: min-v2.1.0-examples-balanced-modal.dot  min-v2.1.0-examples-material-modal.dot  specimen_tensiontest_data-graph.dot  tensiontest-crashsimulation-graph.dot
docs/: breakfast_egg_de.md  breakfast_egg_en.md  examples.md  index.md  modeling-cheatsheet.md  quickstart.md  sdata-core-v0.1.0-klassenhierarchie.md
docs/diagrams/: AttributeQuantityValue_sheetthickness-graph.dot  battery-passport-graph.dot  min-opa-examples-balanced-modal.dot  min-opa-examples-graph.dot  min-opa-examples-informational-modal.dot  min-opa-examples-material-modal.dot  min-v2.1.0-examples-balanced-modal.dot  min-v2.1.0-examples-graph.dot  min-v2.1.0-examples-informational-modal.dot  min-v2.1.0-examples-material-modal.dot  min-v3.0.0-examples-balanced-modal.dot  min-v3.0.0-examples-informational-modal.dot  min-v3.0.0-examples-material-modal.dot  min-v3.2.0-examples-balanced-modal.dot  min-v3.2.0-examples-informational-modal.dot  min-v3.2.0-examples-material-modal.dot  min-v3.3.0-examples-balanced-modal.dot  min-v3.3.0-examples-informational-modal.dot  min-v3.3.0-examples-material-modal.dot  min-v3.4.0-examples-balanced-modal.dot  min-v3.4.0-examples-informational-modal.dot  min-v3.4.0-examples-material-modal.dot  sdata-agents-hierarchy.dot  sdata-class-hierarchy-aligned.dot  sdata-class-hierarchy.dot  sdata-combined-hierarchy.dot  sdata-core-processtypes-hierarchy.dot  sdata-core-processtypes-sdata-only.dot  sdata-lifecycle-flow.dot  sdata-material-state.dot  sdata-min-core-hierarchy-interactive.html  sdata-min-core-hierarchy.dot  sdata-min-core-hierarchy.mmd  sdata-min-opa-core-hierarchy.dot  (+4 more)
examples/: AttributeQuantityValue_sheetthickness.ttl  battery-passport.ttl  index.html  min-opa-examples.ttl  min-v2.1.0-examples.ttl  min-v3.0.0-examples.ttl  min-v3.2.0-examples.ttl  min-v3.3.0-examples.ttl  min-v3.4.0-examples.ttl  min-v3.7.1-examples.ttl  specimen_tensiontest_data.ttl  tensiontest-crashsimulation.ttl
modeling-cheatsheet/: index.html
quickstart/: index.html
search/: search_index.json
shapes/: sdata-core-shapes.ttl
src/: __init__.py  generate_hierarchy.py  generate_sdata_class_docs.py
tests/: parse_all.py  test_agents_hierarchy_plot.py  test_hierarchy_plot.py  test_material_state_plot.py  test_min_opa_examples_plot.py  test_min_opa_sdata_hierarchy_plot.py  test_min_sdata_hierarchy_plot.py  test_min_v1_examples_plot.py  test_min_v21_examples_plot.py  test_ontology.py
(+124 files in other folders)
