[project]
name = "sdata-core"
version = "1.0.0"
description = "Semantic Data Ontology — mid-level ontology for Product Passports, Circular Economy & Digital Twins"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.12"
authors = [
    { name = "Ingolf Lepenies", email = "ingolf@lepenies.de" },
]
keywords = ["ontology", "semantic-web", "product-passport", "circular-economy", "digital-twin", "BFO", "PROV-O", "QUDT"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/lepy/sdata-ontology"
Documentation = "https://github.com/lepy/sdata-ontology/tree/main/docs"
Repository = "https://github.com/lepy/sdata-ontology"
Issues = "https://github.com/lepy/sdata-ontology/issues"

[dependency-groups]
dev = [
    "pyshacl>=0.26",
    "rdflib>=7.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
